@@ -1935,8 +1935,12 @@ static void geda_menu_realize (GtkWidget *widget)
   attributes.x = 0;
   attributes.y = 0;
 
-  attributes.height = MAX (1, widget->requisition.height - (border_width + widget->style->ythickness + vertical_padding) * 2);
+  GtkRequisition *requisition;
+
+  requisition = geda_get_widget_requisition(widget);
+
   attributes.width  = MAX (1, allocation->width - (border_width + widget->style->xthickness + horizontal_padding) * 2);
+  attributes.height = MAX (1, requisition->height - (border_width + widget->style->ythickness + vertical_padding) * 2);
 
   menu->bin_window = gdk_window_new (menu->view_window, &attributes, attributes_mask);
   gdk_window_set_user_data (menu->bin_window, menu);
